--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-streamlit-drawable-canvas
-tensorflow==2.17.0
+streamlit>=1.50
+streamlit-drawable-canvas>=0.9
+tensorflow-cpu>=2.20.0
 Pillow
 numpy
