--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-sstreamlit>=1.50
-streamlit-drawable-canvas>=0.9
-tensorflow-cpu>=2.20.0
-Pillow
+streamlit==1.51.0
+streamlit-drawable-canvas==0.9.3
+tensorflow==2.20.0
 numpy
+pillow
 requests
+huggingface_hub
