--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.51.0
-streamlit-drawable-canvas==0.9.3
-tensorflow==2.20.0
-numpy
+streamlit
+tensorflow==2.16.1
 pillow
+numpy
 requests
-huggingface_hub
+streamlit-drawable-canvas
