--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-tensorflow-cpu-nightly
-pillow
+streamlit==1.51.0
+tensorflow-cpu==2.20.0
 numpy
+pillow
 requests
-streamlit-drawable-canvas
+opencv-python-headless
+rich
